--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <p>
             Uma estrutura de HTML é formada da seguinte forma:
             <blockquote><font color="blue"><b>&lt;head&gt;</b></font>Aquie é a "cabeça" do HTML <font color="blue"><b>&lt;/head&gt;</b></font>
-            <br> <font color="blue"><b>&lt;title&gt;</b></font>Título da página<font color="blue"><b>&lt;/title&gt;</b></font>
-            <br> <font color="blue"><b>&lt;body&gt;</b></font> "corpo" ficará dentro do head e todas as outras tags ficará dentro do body<font color="blue"><<b>&lt;/body&gt;</b></font>
+            <br> <font color="blue"><b>&lt;title&gt;</b></font>Título da página que ficará dentro do head<font color="blue"><b>&lt;/title&gt;</b></font>
+            <br> <font color="blue"><b>&lt;body&gt;</b></font> "corpo" do HTML, todas as tags ficarão dentro do body<font color="blue"><<b>&lt;/body&gt;</b></font>
             <br> <font color="blue"><b>&lt;h1&gt;</b></font> é o título, ficará em negrito e com a letra maior, o h2 em diante ficará do mesmo
             jeito porém com a letra menor<font color="blue"><b>&lt;/h1&gt;</b></font>
             <br> <font color="blue"><b>&lt;p&gt;</b></font> é o parágrafo onde ficará todo o texto que o usuário vai ler<font color="blue"><b>&lt;/p&gt;</b></font>
